[gd_scene load_steps=3 format=3 uid="uid://cyyxc3uqqve2m"]

[ext_resource type="Script" path="res://tylermon/upgrade_menu.gd" id="1_57m5t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtmia"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.552941, 0.407843, 0.847059, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="upgrade_menu" type="Control" groups=["upgrade_menus"]]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_57m5t")

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 1

[node name="hbox" type="HBoxContainer" parent="margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="buttons" type="VBoxContainer" parent="margin/hbox"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="hbox" type="HBoxContainer" parent="margin/hbox/buttons"]
layout_mode = 2

[node name="hp" type="Button" parent="margin/hbox/buttons/hbox"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../../hbox2/str")
text = "Increase Health"
alignment = 0

[node name="stat1" type="Label" parent="margin/hbox/buttons/hbox"]
layout_mode = 2
size_flags_horizontal = 10
text = "HP: 1"
horizontal_alignment = 2

[node name="hbox2" type="HBoxContainer" parent="margin/hbox/buttons"]
layout_mode = 2

[node name="str" type="Button" parent="margin/hbox/buttons/hbox2"]
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../../hbox/hp")
focus_neighbor_bottom = NodePath("../../hbox3/int")
text = "Increase Strength"

[node name="stat2" type="Label" parent="margin/hbox/buttons/hbox2"]
layout_mode = 2
text = "STR: 1"

[node name="hbox3" type="HBoxContainer" parent="margin/hbox/buttons"]
layout_mode = 2

[node name="int" type="Button" parent="margin/hbox/buttons/hbox3"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../hbox2/str")
focus_neighbor_bottom = NodePath("../../hbox5/type")
text = "Increase Intelligence"

[node name="stat3" type="Label" parent="margin/hbox/buttons/hbox3"]
layout_mode = 2
text = "INT: 1"

[node name="hbox5" type="HBoxContainer" parent="margin/hbox/buttons"]
layout_mode = 2

[node name="type" type="Button" parent="margin/hbox/buttons/hbox5"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../../button6")
text = "Change Attack Type"

[node name="stat4" type="Label" parent="margin/hbox/buttons/hbox5"]
layout_mode = 2
text = "NONE"

[node name="button6" type="Button" parent="margin/hbox/buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../hbox5/type")
theme_override_styles/normal = SubResource("StyleBoxFlat_dtmia")
text = "GAMBLE"

[node name="stats" type="VBoxContainer" parent="margin/hbox"]
layout_mode = 2
alignment = 2

[node name="stat_bar" type="HBoxContainer" parent="margin/hbox/stats"]
layout_mode = 2
theme_override_constants/separation = 20

[connection signal="pressed" from="margin/hbox/buttons/hbox/hp" to="." method="_on_button_pressed" binds= ["hp"]]
[connection signal="pressed" from="margin/hbox/buttons/hbox2/str" to="." method="_on_button_pressed" binds= ["str"]]
[connection signal="pressed" from="margin/hbox/buttons/hbox3/int" to="." method="_on_button_pressed" binds= ["int"]]
[connection signal="pressed" from="margin/hbox/buttons/hbox5/type" to="." method="_on_button_pressed" binds= ["type"]]
[connection signal="pressed" from="margin/hbox/buttons/button6" to="." method="_on_button_pressed" binds= ["gamble"]]
